kubernetes/apps/lidarr/lidarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
