kubernetes/apps/lidarr/lidarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: lidarr
spec:
  hostnames:
    - lidarr.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lidarr
          namespace: lidarr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
